Fix image position, alignment and spacing

--- a/style.css
+++ b/style.css
@@ -80,39 +80,54 @@ li {
 
 .container-2, .card-items {
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .container-2 {
     flex-direction: column;
-}
+    padding: 30px;
 
-.container-2 {
-    padding: 30px;;
 }
 
 .container-2 h3 {
     font-size: 36px;
     font-weight: 900;
     color: #1f2937;
+    align-self: center;
+}
+
+.container-2 {
+    padding: 0;
+    margin: 0;
 }
 
 .card {
     display: flex;
-    flex-direction: row;
+    justify-content: center;
     padding: 24px;
+    margin: 0;
 }
 
 .card-items {
     flex-direction: column;
     text-wrap: wrap;
+    width: 158px;
     text-align: center;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
-.card-items img {
+.card-items-img {
     border: 4px solid #3882f6;;
     border-radius: 10px;
+    width: 150px;
+    height: 150px;
+    margin-bottom: 8px;
+}
+
+.card-items-img img {
+    border-radius: 5px;
+    object-fit: cover;
+    height: 150px;
     width: 150px;
 }
 
@@ -140,7 +155,7 @@ li {
 .container-3 .author {
     align-self: flex-end;
     font-size: 20px;
-    font-weight: bolder;
+    font-weight: 800;
 }
 
 .box {
